services/corenlp/src/edu/stanford/nlp/trees/tregex/tsurgeon/TsurgeonParser.java
/* TsurgeonParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. TsurgeonParser.java */
package edu.stanford.nlp.trees.tregex.tsurgeon;

import edu.stanford.nlp.trees.*;
import edu.stanford.nlp.util.Generics;
import java.util.*;


class TsurgeonParser/*@bgen(jjtree)*/implements TsurgeonParserTreeConstants, TsurgeonParserConstants {/*@bgen(jjtree)*/
  protected JJTTsurgeonParserState jjtree = new JJTTsurgeonParserState();
  private TreeFactory treeFactory = new LabeledScoredTreeFactory();

  public static void main(String[] args) {
    System.out.println("Reading from standard input...");
    TsurgeonParser t = new TsurgeonParser(System.in);
    try {
      TsurgeonPattern n = t.Root();
      System.out.println(n.toString());
      System.out.println("Thank you.");
    } catch (Exception e) {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
      e.printStackTrace();
    }
  }

// TODO: this is wasteful in terms of creating TsurgeonPatternRoot.
// Should separate that out into another production
  final public TsurgeonPatternRoot Root() throws ParseException {/*@bgen(jjtree) Root */
  SimpleNode jjtn000 = new SimpleNode(JJTROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token name;
  TsurgeonPattern result;
  List<TsurgeonPattern> results = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DELETE:
      case PRUNE:
      case RELABEL:
      case EXCISE:
      case INSERT:
      case MOVE:
      case REPLACE:
      case CREATE_SUBTREE:
      case ADJOIN:
      case ADJOIN_TO_HEAD:
      case ADJOIN_TO_FOOT:
      case COINDEX:{
        result = Operation();
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return new TsurgeonPatternRoot(result);}
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        if (jj_2_1(2)) {
          jj_consume_token(IF);
          jj_consume_token(EXISTS);
          name = jj_consume_token(NAME);
          result = Root();
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return new TsurgeonPatternRoot(new IfExistsNode(name.image, false, result.children));}
        } else if (jj_2_2(2)) {
          jj_consume_token(IF);
          jj_consume_token(NOT);
          jj_consume_token(EXISTS);
          name = jj_consume_token(NAME);
          result = Root();
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return new TsurgeonPatternRoot(new IfExistsNode(name.image, true, result.children));}
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case OPEN_BRACKET:{
            label_1:
            while (true) {
              jj_consume_token(OPEN_BRACKET);
              result = Root();
              jj_consume_token(CLOSE_BRACKET);
if (results == null) {
        results = Generics.newArrayList();
      }
      for (TsurgeonPattern child : result.children) {
        results.add(child);
      }
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case OPEN_BRACKET:{
                ;
                break;
                }
              default:
                jj_la1[0] = jj_gen;
                break label_1;
              }
            }
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
TsurgeonPattern[] array = new TsurgeonPattern[results.size()];
    {if ("" != null) return new TsurgeonPatternRoot(results.toArray(array));}
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
}

  final public TsurgeonPattern Operation() throws ParseException {/*@bgen(jjtree) Operation */
  SimpleNode jjtn000 = new SimpleNode(JJTOPERATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);TsurgeonPattern child1;
  TsurgeonPattern child2 = null;
  Token newLabel = null;
  TreeLocation loc = null;
  Token operator;
  AuxiliaryTree tree = null;
  List<AuxiliaryTree> treeList = null;
  List<TsurgeonPattern> nodeSelections = null;
  Token regex;
  Token hash_int;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DELETE:{
        operator = jj_consume_token(DELETE);
        nodeSelections = NodeSelectionList(new ArrayList<TsurgeonPattern>());
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new DeleteNode(nodeSelections);}
        break;
        }
      case PRUNE:{
        operator = jj_consume_token(PRUNE);
        nodeSelections = NodeSelectionList(new ArrayList<TsurgeonPattern>());
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new PruneNode(nodeSelections);}
        break;
        }
      case EXCISE:{
        operator = jj_consume_token(EXCISE);
        child1 = NodeSelection();
        child2 = NodeSelection();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new ExciseNode(child1,child2);}
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        if (jj_2_3(3)) {
          operator = jj_consume_token(RELABEL);
          child1 = NodeSelection();
          newLabel = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new RelabelNode(child1,newLabel.image);}
        } else if (jj_2_4(3)) {
          operator = jj_consume_token(RELABEL);
          child1 = NodeSelection();
          newLabel = jj_consume_token(QUOTEX);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new RelabelNode(child1, newLabel.image);}
        } else if (jj_2_5(3)) {
          operator = jj_consume_token(RELABEL);
          child1 = NodeSelection();
          regex = jj_consume_token(REGEX);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new RelabelNode(child1, regex.image);}
        } else if (jj_2_6(3)) {
          operator = jj_consume_token(RELABEL);
          child1 = NodeSelection();
          newLabel = jj_consume_token(GENERAL_RELABEL);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new RelabelNode(child1, newLabel.image);}
        } else if (jj_2_7(3)) {
          operator = jj_consume_token(REPLACE);
          child1 = NodeSelection();
          child2 = NodeSelection();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new ReplaceNode(child1,child2);}
        } else if (jj_2_8(3)) {
          operator = jj_consume_token(REPLACE);
          child1 = NodeSelection();
          treeList = TreeList(false);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new ReplaceNode(child1,treeList);}
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case MOVE:{
            operator = jj_consume_token(MOVE);
            child1 = NodeSelection();
            loc = Location();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new MoveNode(child1, loc);}
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            if (jj_2_9(3)) {
              operator = jj_consume_token(INSERT);
              child1 = NodeSelection();
              loc = Location();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new InsertNode(child1, loc);}
            } else if (jj_2_10(3)) {
              operator = jj_consume_token(INSERT);
              tree = TreeRoot(false);
              loc = Location();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new InsertNode(tree, loc);}
            } else {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case CREATE_SUBTREE:{
                operator = jj_consume_token(CREATE_SUBTREE);
                tree = TreeRoot(false);
                nodeSelections = NodeSelectionList(new ArrayList<TsurgeonPattern>());
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
if (nodeSelections.size() == 1) {
        {if ("" != null) return new CreateSubtreeNode(nodeSelections.get(0), tree);}
      } else if (nodeSelections.size() == 2) {
        {if ("" != null) return new CreateSubtreeNode(nodeSelections.get(0), nodeSelections.get(1), tree);}
      } else {
        {if (true) throw new ParseException("Illegal number of nodes given to createSubtree (" + nodeSelections.size() + ")");}
      }
                break;
                }
              case ADJOIN:{
                operator = jj_consume_token(ADJOIN);
                tree = TreeRoot(true);
                child1 = NodeSelection();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new AdjoinNode(tree, child1);}
                break;
                }
              case ADJOIN_TO_HEAD:{
                operator = jj_consume_token(ADJOIN_TO_HEAD);
                tree = TreeRoot(true);
                child1 = NodeSelection();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new AdjoinToHeadNode(tree, child1);}
                break;
                }
              case ADJOIN_TO_FOOT:{
                operator = jj_consume_token(ADJOIN_TO_FOOT);
                tree = TreeRoot(true);
                child1 = NodeSelection();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new AdjoinToFootNode(tree, child1);}
                break;
                }
              case COINDEX:{
                operator = jj_consume_token(COINDEX);
                nodeSelections = NodeSelectionList(new ArrayList<TsurgeonPattern>());
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new CoindexNodes(nodeSelections.toArray(new TsurgeonPattern[] {}));}
                break;
                }
              default:
                jj_la1[5] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
}

  final public TreeLocation Location() throws ParseException {/*@bgen(jjtree) Location */
  SimpleNode jjtn000 = new SimpleNode(JJTLOCATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token rel;
  TsurgeonPattern child;
    try {
      rel = jj_consume_token(LOCATION_RELATION);
      child = NodeSelection();
jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
{if ("" != null) return new TreeLocation(rel.image, child);}
    } catch (Throwable jjte000) {
if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
    throw new Error("Missing return statement in function");
}

  final public List<TsurgeonPattern> NodeSelectionList(List<TsurgeonPattern> l) throws ParseException {/*@bgen(jjtree) NodeSelectionList */
  SimpleNode jjtn000 = new SimpleNode(JJTNODESELECTIONLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);TsurgeonPattern result;
    try {
      result = NodeSelection();
l.add(result);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_2;
        }
        result = NodeSelection();
l.add(result);
      }
jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
{if ("" != null) return l;}
    } catch (Throwable jjte000) {
if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
    throw new Error("Missing return statement in function");
}

// TODO: what does this next comment mean?
// we'll also put in a way to use a SELECTION with a list of nodes.
  final public TsurgeonPattern NodeSelection() throws ParseException {/*@bgen(jjtree) NodeSelection */
  SimpleNode jjtn000 = new SimpleNode(JJTNODESELECTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);TsurgeonPattern result;
    try {
      result = NodeName();
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return result;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
}

  final public TsurgeonPattern NodeName() throws ParseException {/*@bgen(jjtree) NodeName */
  SimpleNode jjtn000 = new SimpleNode(JJTNODENAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return new FetchNode(t.image);}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
}

  final public List<AuxiliaryTree> TreeList(boolean requiresFoot) throws ParseException {/*@bgen(jjtree) TreeList */
  SimpleNode jjtn000 = new SimpleNode(JJTTREELIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);List<AuxiliaryTree> trees = Generics.newArrayList();
  AuxiliaryTree tree;
    try {
      tree = TreeRoot(requiresFoot);
trees.add(tree);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:
        case TREE_NODE_TERMINAL_LABEL:
        case TREE_NODE_NONTERMINAL_LABEL:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        tree = TreeRoot(requiresFoot);
trees.add(tree);
      }
jjtree.closeNodeScope(jjtn000, true);
     jjtc000 = false;
{if ("" != null) return trees;}
    } catch (Throwable jjte000) {
if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
    throw new Error("Missing return statement in function");
}

// the argument says whether there must be a foot node on the aux tree.
  final public AuxiliaryTree TreeRoot(boolean requiresFoot) throws ParseException {/*@bgen(jjtree) TreeRoot */
  SimpleNode jjtn000 = new SimpleNode(JJTTREEROOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Tree t;
    try {
      t = TreeNode();
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return new AuxiliaryTree(t,requiresFoot);}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
}

  final public Tree TreeNode() throws ParseException {/*@bgen(jjtree) TreeNode */
 SimpleNode jjtn000 = new SimpleNode(JJTTREENODE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token label;
 List<Tree> dtrs = null;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TREE_NODE_NONTERMINAL_LABEL:{
        label = jj_consume_token(TREE_NODE_NONTERMINAL_LABEL);
        dtrs = TreeDtrs(new ArrayList<Tree>());
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return treeFactory.newTreeNode(label.image.substring(1),dtrs);}
        break;
        }
      case TREE_NODE_TERMINAL_LABEL:{
        label = jj_consume_token(TREE_NODE_TERMINAL_LABEL);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return treeFactory.newTreeNode(label.image,new ArrayList<Tree>());}
        break;
        }
      case IDENTIFIER:{
        label = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
{if ("" != null) return treeFactory.newTreeNode(label.image,new ArrayList<Tree>());}
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
    throw new Error("Missing return statement in function");
}

  final public List<Tree> TreeDtrs(List<Tree> dtrs) throws ParseException {/*@bgen(jjtree) TreeDtrs */
  SimpleNode jjtn000 = new SimpleNode(JJTTREEDTRS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Tree tree;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:
      case TREE_NODE_TERMINAL_LABEL:
      case TREE_NODE_NONTERMINAL_LABEL:{
        tree = TreeNode();
        TreeDtrs(dtrs);
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
dtrs.add(0,tree); {if ("" != null) return dtrs;}
        break;
        }
      case CLOSE_PAREN:{
        jj_consume_token(CLOSE_PAREN);
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return dtrs;}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

